<resources>
    <string name="app_name" translatable="false">Emoji Battery Widget</string>

    <string name="english" translatable="false">English</string>
    <string name="vietnamese" translatable="false">Vietnamese</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>

    <string name="onboarding_intro1">See anything through phone screen</string>
    <string name="onboarding_intro2">Stock wallpapers for free</string>
    <string name="onboarding_intro3">Stock wallpapers for free</string>

    <string name="txt_transparent">Transparent Wallpaper</string>

    <string name="txt_categories">Categories</string>
    <string name="txt_cancel">Cancel</string>
    <string name="this_action_contain_ads">This action contain Ads</string>
    <string name="loading_cmp">Loading Consent Management Platform</string>
    <string name="txt_next">Next</string>
    <string name="txt_get_start">Get start</string>
    <string name="are_you_sure_you_want_to_exit">are you sure you want to exit?</string>
    <string name="txt_exit">Exit</string>

    <string name="rate_us">Rate Us</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="txt_settings">Settings</string>

    <string name="txt_welcome_back">Welcome back</string>
    <string name="txt_see_anything_through_phone_screen">See anything through phone screen</string>
    <string name="txt_transparent_wallpapers">Transparent \nWallpapers</string>
    <string name="txt_mirror_wallpapers">Mirror \nWallpapers</string>
    <string name="txt_diy">DIY</string>
    <string name="txt_select">Select</string>
    <string name="txt_share_app">Share app</string>
    <string name="wallpaper_description">wallpaper description</string>
    <string name="txt_success">Success</string>
    <string name="txt_your_require_has_been_update_successfully">Your required has been updated successfully</string>
    <string name="txt_backgrounds">Backgrounds</string>
    <string name="txt_stickers">Stickers</string>
    <string name="txt_quotes">Quotes</string>
    <string name="txt_customize">Customize</string>
    <string name="txt_set_as_lock_screen">Set as lock screen</string>
    <string name="txt_set_as_lock_screen_amp_home_screen">Set as lock screen &amp; home screen</string>
    <string name="txt_set_as_home_screen">Set as home screen</string>
    <string name="txt_apply">Apply</string>
    <string name="txt_result">Result</string>
    <string name="txt_set_wallpaper_failed">Set wallpaper failed</string>
    <string name="txt_how_would_you_love_this_app">How would you love this app</string>
    <string name="title_rate">Thanks for your feedback</string>
    <string name="txt_rate_us">Rate Us</string>
    <string name="txt_permission">Permission</string>
    <string name="txt_allow_permissions_for_a_better_expericence">Allow permissions for a better experience</string>
    <string name="txt_allow_camera_access">Allow camera access</string>
    <string name="txt_access_camera">Access Camera</string>
    <string name="txt_some_functions_require_permission_camera">Some functions require permission camera</string>
    <string name="txt_go_to_setting">Go to setting</string>
    <string name="txt_exit_app">You want to exit the application?</string>
    <string name="txt_are_you_sure">Are you sure?</string>
    <string name="txt_yes">Yes</string>
    <string name="choose_one">Choose one</string>

</resources>