<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llTopPermission"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size26"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tvNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/size120"
            android:layout_height="@dimen/size120"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:src="@drawable/img_permission" />

        <TextView
            style="@style/TextView_7"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/size16"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/txt_permission"
            android:textColor="@color/white"
            android:textSize="@dimen/size24"
            tools:ignore="SpUsage" />

        <TextView
            style="@style/TextView_5"
            android:layout_marginHorizontal="@dimen/size16"
            android:text="@string/txt_allow_permissions_for_a_better_expericence"
            android:textColor="@color/color_text" />

        <LinearLayout
            android:id="@+id/llCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size16"
            android:layout_marginTop="@dimen/size24"
            android:background="@drawable/bg_border_permisson"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/size16">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_camera" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size10"
                    android:text="@string/txt_access_camera"
                    android:textColor="@color/color_text" />

                <TextView
                    style="@style/TextView_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size10"
                    android:text="@string/txt_allow_camera_access"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/size12" />

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:theme="@style/SwitchTheme" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/size20"
        android:paddingHorizontal="@dimen/size30"
        android:paddingTop="@dimen/size5"
        android:paddingBottom="@dimen/size6"
        android:text="@string/txt_next"
        android:textColor="@color/color_bg"
        android:textSize="@dimen/size16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>